all abstract views w/ vue component

--- a/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
@@ -24,9 +24,9 @@
             <span class="nav-button"><router-link to="/home">Home</router-link></span>
             <span class="nav-button"><router-link to="/language">Language</router-link></span>
             <span class="nav-button"><router-link to="/setup">Setup</router-link></span>
-            <span class="nav-button"><router-link to="/airportNav">Airport</router-link></span>
-            <span class="nav-button"><router-link to="/metroNav">Metro</router-link></span>
-            <span class="nav-button"><router-link to="/taxiNav">Taxi</router-link></span>
+            <span class="nav-button"><router-link to="/airport">Airport</router-link></span>
+            <span class="nav-button"><router-link to="/metro">Metro</router-link></span>
+            <span class="nav-button"><router-link to="/uber">Taxi</router-link></span>
             <span class="nav-button"><router-link to="/destination">Destination</router-link></span>
             <span class="nav-button"><router-link to="/feedback">Feedback</router-link></span>
         </div>
