加上子頁面: 餐廳

--- a/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
@@ -29,6 +29,7 @@
             <span class="nav-button"><router-link to="/uber">Taxi</router-link></span>
             <span class="nav-button"><router-link to="/destination">Destination</router-link></span>
             <span class="nav-button"><router-link to="/feedback">Feedback</router-link></span>
+            <span class="nav-button"><router-link to="/restaurant">Restaurant</router-link></span>
         </div>
 
 
