--- a/Source/HackathonWeb/HackathonWeb/Views/PocRestaurantMap/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/PocRestaurantMap/Index.cshtml
@@ -45,6 +45,12 @@
 	var magicNumber = magicDiff;
 	var oldMapZoom = 18;
 	var maxMarker = 200;
+	var dataAddress = [];
+	var dataStoreName = [];
+	var dataStoreTel = [];
+	var dataPosition = [];
+	var markerLocations = [];
+	var markerContainer = [];
 
     // Initialize the platform object:
     var platform = new H.service.Platform({
@@ -73,6 +79,28 @@
 	    var nowMapCenter = restaurantMap.getCenter();
 	    center.lng = nowMapCenter.lng;
 	    center.lat = nowMapCenter.lat;
+	});
+
+	// Add event listener:
+	restaurantMap.addEventListener('pointerup', function(evt) {
+	    // Log 'dragend' and 'mouse' events:
+	    
+		if (evt.target.type == 3) {
+		    console.log(evt.type, evt.target.getPosition());
+		    console.log(markerContainer.length);
+		    var index;
+		    for (i = 0; i < dataPosition.length; ++i) {
+		        if (dataPosition[i].lat == evt.target.getPosition().lat && dataPosition[i].lng == evt.target.getPosition().lng) {
+		            console.log('found');
+		            index = i;
+		            break;
+		        }
+		    }
+
+		    console.log(dataAddress[index]);
+		    console.log(dataStoreName[index]);
+		    console.log(dataStoreTel[index]);
+		}
 	});
 
 	restaurantMap.addEventListener('mapviewchangeend', function() {
@@ -109,14 +137,14 @@
 
     // Define a callback function to process the geocoding response:
     var onRestaurantResult = function(result) {
-        var locations = result.Response.View[0].Result,
+        var markerLocations = result.Response.View[0].Result,
             position,
             marker;
         // Add a marker for each location found
-        for (i = 0;  i < locations.length; i++) {
+        for (i = 0;  i < markerLocations.length; i++) {
             position = {
-                lat: locations[i].Location.DisplayPosition.Latitude,
-                lng: locations[i].Location.DisplayPosition.Longitude
+                lat: markerLocations[i].Location.DisplayPosition.Latitude,
+                lng: markerLocations[i].Location.DisplayPosition.Longitude
             };
 
             // marker = new H.map.Marker(position);
@@ -163,12 +191,12 @@
     };
 
     // alert('@Model[1].Address');
-    var dataAddress = [];
-    var dataPosition = [];
     
     @foreach (var d in Model)
     {
         @:dataAddress.push('@d.Address');
+		@:dataStoreName.push('@d.Name');
+        @:dataStoreTel.push('@d.Phone');
 
 		@:var position = {
         @:lng:0,
@@ -181,12 +209,8 @@
         @:dataPosition.push(position);
 		@:console.log(position.lng, position.lat);
     }
-
-	var markerContainer = [];
 	
     function RefreshMarker() {
-		
-        var locations = [];
         for (i = 0; i < dataPosition.length; ++i) {
             //alert(dataPosition[i].lat);
             //alert(dataPosition[i].lng);
@@ -200,16 +224,16 @@
                 parseFloat(dataPosition[i].lat) + magicNumber > center.lat &&
                 parseFloat(dataPosition[i].lat) - magicNumber < center.lat) {
 
-				if(locations.length < maxMarker)
+				if(markerLocations.length < maxMarker)
 				{
-                    locations.push(dataPosition[i]);
+				    markerLocations.push(dataPosition[i]);
 			    }
             }
 
         }
 
         console.log(dataPosition.length);
-        console.log(locations.length);
+        console.log(markerLocations.length);
 
         for(i = 0; i < markerContainer.length; ++i)
         {
@@ -219,11 +243,11 @@
         }
 
         // Add a marker for each location found
-        for (i = 0; i < locations.length; i++) {
+        for (i = 0; i < markerLocations.length; i++) {
 
             // marker = new H.map.Marker(position);
             var icon = new H.map.Icon(svgMarkup),
-                marker = new H.map.Marker(locations[i], { icon: icon });
+                marker = new H.map.Marker(markerLocations[i], { icon: icon });
 
             markerContainer.push(marker);
             restaurantMap.addObject(marker);
