--- a/Source/HackathonWeb/HackathonWeb/Scripts/product.css
+++ b/Source/HackathonWeb/HackathonWeb/Scripts/product.css
@@ -1,6 +1,6 @@
 ﻿html {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.1em;
+    
 }
 
 a { text-decoration: none; }
@@ -154,6 +154,27 @@ a:active { color: white; }
     background: url("assets/img-airport.png") no-repeat;
 }
 
+.current-position .metro {
+    width: 120px;
+    height: 120px;
+    padding: 0 1rem 0 0;
+    background: url("assets/img-metro.png") no-repeat;
+}
+
+.current-position .taxi {
+    width: 120px;
+    height: 120px;
+    padding: 0 1rem 0 0;
+    background: url("assets/img-taxi.png") no-repeat;
+}
+
+.current-position .hotel {
+    width: 120px;
+    height: 120px;
+    padding: 0 1rem 0 0;
+    background: url("assets/img-hotel.png") no-repeat;
+}
+
 .position-name {
     font-size: 2rem;
     color: #fff;
@@ -187,30 +208,35 @@ a:active { color: white; }
 .position-selection .pos0 {
     width: 35px;
     height: 35px;
+    padding-bottom: 12px;
     background: url("assets/img-stage1_green.png") no-repeat;
 }
 
 .position-selection .pos1 {
     width: 35px;
     height: 35px;
+    padding-bottom: 12px;
     background: url("assets/img-stage2_green.png") no-repeat;
 }
 
 .position-selection .pos2 {
     width: 35px;
     height: 35px;
+    padding-bottom: 12px;
     background: url("assets/img-stage3_green.png") no-repeat;
 }
 
 .position-selection .pos3 {
     width: 35px;
     height: 35px;
+    padding-bottom: 12px;
     background: url("assets/img-stage4_green.png") no-repeat;
 }
 
 .position-selection .pos4 {
     width: 35px;
     height: 35px;
+    padding-bottom: 12px;
     background: url("assets/img-stage5_green.png") no-repeat;
 }
 
@@ -234,4 +260,71 @@ a:active { color: white; }
     background: url("assets/img-stage5_yellow.png") no-repeat;
 }
 
+.position-selection > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.icon-airport {
+    width: 55px;
+    height: 55px;
+    background: url("assets/img-airport_green.png") no-repeat;
+}
+
+.position-selection .icon-metro {
+    width: 55px;
+    height: 55px;
+    background: url("assets/img-metro_green.png") no-repeat;
+}
+
+.position-selection .icon-taxi {
+    width: 55px;
+    height: 55px;
+    background: url("assets/img-taxi_green.png") no-repeat;
+}
+
+.position-selection .icon-hotel {
+    width: 55px;
+    height: 55px;
+    background: url("assets/img-hotel_green.png") no-repeat;
+}
+
+.active .icon-airport{
+    background: url("assets/img-airport_yellow.png") no-repeat;
+}
+
+.active .icon-metro {
+    background: url("assets/img-metro_yellow.png") no-repeat;
+}
+
+.active .icon-taxi {
+    width: 55px;
+    height: 55px;
+    background: url("assets/img-taxi_yellow.png") no-repeat;
+}
+
+.active .icon-hotel {
+    width: 55px;
+    height: 55px;
+    background: url("assets/img-hotel_yellow.png") no-repeat;
+}
+
+.location-details {
+    color: #00726E;
+    font-weight: bold;
+    padding: 1rem;
+}
+
+
+.icon-toilet {
+    width: 55px;
+    height: 55px;
+    background: url("assets/img-hotel_green.png") no-repeat;
+}
+
+.icon-elevator {
+    width: 60px;
+    height: 60px;
+    background: url("assets/img-elevator.png") no-repeat;
+}
