Add return value (map) after setup

--- a/Source/HackathonWeb/HackathonWeb/Views/Shared/_ProductLayout.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/Shared/_ProductLayout.cshtml
@@ -30,6 +30,7 @@
                 document.getElementById(elementId),
                 maptypes.normal.map,
                 mapInitArgs);
+            return map;
         }
     </script>
 </head>
