--- a/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
@@ -27,7 +27,7 @@
             <span class="nav-button"><router-link to="/airport">Airport</router-link></span>
             <span class="nav-button"><router-link to="/metro">Metro</router-link></span>
             <span class="nav-button"><router-link to="/taxi">Taxi</router-link></span>
-            <span class="nav-button"><router-link to="/hotel">hotel</router-link></span>
+            <span class="nav-button"><router-link to="/hotel">Hotel</router-link></span>
             <span class="nav-button"><router-link to="/feedback">Feedback</router-link></span>
             <span class="nav-button"><router-link to="/restaurant">Restaurant</router-link></span>
         </div>
