--- a/Source/HackathonWeb/HackathonWeb/Views/PocRestaurantMap/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/PocRestaurantMap/Index.cshtml
@@ -220,7 +220,9 @@
     }
 	
     function RefreshMarker() {
-        for (i = 0; i < dataPosition.length; ++i) {
+        dataPosition.sort(function(a, b){return 0.5 - Math.random()});
+        for (i = 0; i < maxMarker; ++i) {
+
             //alert(dataPosition[i].lat);
             //alert(dataPosition[i].lng);
 
@@ -233,10 +235,7 @@
                 parseFloat(dataPosition[i].lat) + magicNumber > center.lat &&
                 parseFloat(dataPosition[i].lat) - magicNumber < center.lat) {
 
-				if(markerLocations.length < maxMarker)
-				{
-				    markerLocations.push(dataPosition[i]);
-			    }
+				markerLocations.push(dataPosition[i]);
             }
 
         }
