--- a/Source/HackathonWeb/HackathonWeb/Scripts/product.css
+++ b/Source/HackathonWeb/HackathonWeb/Scripts/product.css
@@ -331,3 +331,11 @@ a:active { color: white; }
     background: url("assets/img-elevator.png") no-repeat;
 
 }
+
+.here-map-box {
+    min-width: 640px;
+    min-height: 480px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
