--- a/Source/HackathonWeb/HackathonWeb/Scripts/product.css
+++ b/Source/HackathonWeb/HackathonWeb/Scripts/product.css
@@ -356,3 +356,36 @@ a:active { color: white; }
     height: 100%;
     position: absolute;
 }
+
+
+
+.key-pic-airport {
+    background: url("key-pic/elevator-airport.jpg") no-repeat;
+    width: 100%;
+    height: 100%;
+    border: #333333 solid 1px;
+}
+
+.thumb-key-pic-airport {
+    background: url("key-pic/elevator-airport.jpg") no-repeat;
+    background-size: contain;
+    width: 120px;
+    height: 80px;
+    border: #00726e solid 1px;
+}
+
+.enlarged-view {
+    position: fixed;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 600px;
+    height: 400px;
+    border: #00726e solid 1px;
+    padding: 1.5rem;
+    background-color: #00726eab;
+}
+
+.thumb-view {
+}
