Fix interaction map ui

--- a/Source/HackathonWeb/HackathonWeb/Views/Shared/_ProductLayout.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/Shared/_ProductLayout.cshtml
@@ -36,7 +36,7 @@
                 map.maptypes.normal.map);
             var mapEvents = new H.mapevents.MapEvents(map.instance);
             var behavior = new H.mapevents.Behavior(mapEvents);
-            var ui = H.ui.UI.createDefault(interactMap, defaultLayers);
+            var ui = H.ui.UI.createDefault(map.instance, map.maptypes);
             return map;
         }
     </script>
