--- a/Source/HackathonWeb/HackathonWeb/Views/PocRestaurantMap/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/PocRestaurantMap/Index.cshtml
@@ -80,6 +80,8 @@
         for(i = 0; i < bubbleContainer.length; ++i)
         {
             bubbleContainer[i].close();
+            bubbleContainer.shift();
+            --i;
         }
     }
 
