Add uber hyperlink

--- a/Source/HackathonWeb/HackathonWeb/Scripts/product.css
+++ b/Source/HackathonWeb/HackathonWeb/Scripts/product.css
@@ -129,7 +129,6 @@ a:active { color: white; }
     
 }
 
-
 .map-view {
     width: 100%;
     position: absolute;
@@ -422,4 +421,14 @@ a:active { color: white; }
     position: fixed;
     left: 10px;
     top: 120px;
+}
+
+.icon-uber {
+    background: url("assets/img-uber.png") no-repeat;
+    width: 120px;
+    height: 120px;
+    position: absolute;
+    bottom: 250px;
+    left: 4px;
+    cursor: pointer;
 }
