Make map only one instance

--- a/Source/HackathonWeb/HackathonWeb/Scripts/product.css
+++ b/Source/HackathonWeb/HackathonWeb/Scripts/product.css
@@ -432,3 +432,20 @@ a:active { color: white; }
     left: 4px;
     cursor: pointer;
 }
+
+.icon-centerMap {
+    background: url("assets/img-dot_green.png") no-repeat;
+    width: 120px;
+    height: 120px;
+    position: absolute;
+    bottom: 250px;
+    right: 4px;
+    cursor: pointer;
+}
+
+.global-map-box{
+    height: 70%;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
