--- a/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
@@ -16,6 +16,8 @@
     <div id="app-content" class="content-view">
         <router-view></router-view>
     </div>
+
+    <here-map1 v-show="isMapVisible" map-div-id="globalMap" ref="globalMapInstance"></here-map1>
     
     <div id="app-nav" class="nav-view-box">
 
@@ -34,6 +36,8 @@
 
 
     </div>
+
+
 
 </div>
 
