Auto refeash current position

--- a/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div id="app" class="main-app-container">
-    <div class="app-title"><span class="app-tag-line">{{ tagLine }}. CodeMonkey @@ 2018 Hackthon</span><small> ( {{ latitude }} | {{ longitude }} )</small></div>
+    <div class="app-title"><span class="app-tag-line">{{ tagLine }}. CodeMonkey @@ 2018 Hackthon</span><small> ( {{ currentPosition.latitude }} | {{ currentPosition.longitude }} )</small></div>
     
 
 
