--- a/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using HackathonWeb.Models
-@model IList<HackathonWeb.Models.Restaurant>
+﻿@model HackathonWeb.Models.ProductModel
 
 @{
     ViewBag.Title = "Product Home";
@@ -7,7 +6,7 @@
 }
 
 <div id="app" class="main-app-container">
-    <div class="app-title"><span class="app-tag-line">{{ tagLine }}. CodeMonkey @@ 2018 Hackthon</span><small> ( {{ latitude }} | {{ longitude }} )</small></div>
+    <div class="app-title"><span class="app-tag-line">{{ tagLine }}. CodeMonkey @@ 2018 Hackthon</span><small> ( {{ currentPosition.latitude }} | {{ currentPosition.longitude }} )</small></div>
     
 
 
@@ -19,7 +18,7 @@
     </div>
 
     <here-map1 v-show="isMapVisible" map-div-id="globalMap" ref="globalMapInstance"></here-map1>
-
+    
     <div id="app-nav" class="nav-view-box">
 
 
@@ -30,7 +29,7 @@
             <span class="nav-button"><router-link to="/airport">Airport</router-link></span>
             <span class="nav-button"><router-link to="/metro">Metro</router-link></span>
             <span class="nav-button"><router-link to="/taxi">Taxi</router-link></span>
-            <span class="nav-button"><router-link to="/hotel">hotel</router-link></span>
+            <span class="nav-button"><router-link to="/hotel">Hotel</router-link></span>
             <span class="nav-button"><router-link to="/feedback">Feedback</router-link></span>
             <span class="nav-button"><router-link to="/restaurant">Restaurant</router-link></span>
         </div>
@@ -38,32 +37,9 @@
 
     </div>
 
+
+
 </div>
 
 
 <script type="text/javascript" src="~/Scripts/product.js"></script>
-    <script>
-        var dataPosition = [];
-        var dataAddress = [];
-        var dataStoreName = [];
-        var dataStoreTel = [];
-    
-        @foreach (var d in Model)
-    {
-        @:dataAddress.push('@d.Address');
-        @:dataStoreName.push('@d.Name');
-        @:dataStoreTel.push('@d.Phone');
-
-        @:var position = {
-        @:lng:0,
-        @:lat:0
-        @:};
-
-        @:position.lng = '@d.Longitude';
-        @:position.lat = '@d.Latitude';
-
-        @:dataPosition.push(position);
-        @:console.log(position.lng, position.lat);
-    }
-    
-    </script>
