--- a/Source/HackathonWeb/HackathonWeb/Scripts/product.css
+++ b/Source/HackathonWeb/HackathonWeb/Scripts/product.css
@@ -3,6 +3,11 @@
     
 }
 
+body {
+    padding: 0;
+    margin: 0;
+}
+
 a { text-decoration: none; }
 
 a:link { color: white; }
@@ -22,17 +27,20 @@ a:active { color: white; }
 
 .content-view {
     width: 100%;
-    height: 90%;
+    /* height: 90%; */
     position: absolute;
-    margin: 0 0 40% 0;
+    /* margin: 0 0 40% 0; */
+    bottom: 1.3rem;
+    top: 1.25rem;
 }
 
 .home-container {
     width: 100%;
     height: 100%;
     position: relative;
-    background: url("assets/img-homepage.png") no-repeat;
+    background: url(assets/img-homepage.png) no-repeat;
     background-position: center center;
+    background-size: contain;
 }
 
 .product-name {
@@ -50,26 +58,29 @@ a:active { color: white; }
 
     position: absolute;
     width: 100%;
-    bottom: 4%;
+    bottom: 0.2rem;
 
     cursor: pointer;
 }
 
 .go-button {
-    width: 240px;
-    padding: 1.2em;
+    width: 20%;
+    padding: 1.2rem;
     text-align: center;
     color: #EEEEEE;
-    background: url("assets/btn-comfirm.png") no-repeat;
+    background: url(assets/btn-comfirm.png) no-repeat;
     background-size: 100% 100%;
-    font-size: 2em;    
+    font-size: 2rem; 
 }
 
 .app-title {
     width: 100%;
-    text-align: center;
-    font-size: 0.5em;
-    color: #AAAAAA;
+    text-align: right;
+    font-size: 0.3rem;
+    padding: 0.15rem;
+    color: #78b4b2;
+    background-color: #00726e;
+
 }
 
 
@@ -77,7 +88,7 @@ a:active { color: white; }
 .nav-view-box {
 
     width: 100%;
-    height: 10%;
+    height: 1.3rem;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -86,33 +97,37 @@ a:active { color: white; }
 .nav-items-box {
     position: absolute;
     width: 100%;
-    /* height: 50%; */
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    bottom: 4px;
+    background-color: #00726e;
+    font-size: 0.75rem;
 }
 
 .nav-items-box .nav-button {
     flex: 0 0 80px;
-    height: 1.6em;
+    height: 1.2rem;
     /* background-image:  */
-    border: 1px solid #00726E;
-    background-color: #00726e;
+    /* border: 1px solid #00726E; */
+    /* background-color: #00726e; */
+    /* border-left: 1px solid #AAA; */
     color: #FFFFFF;
-    padding: 0.2em;
+    padding: 0.2rem;
+    text-align: center;
+
 }
 
 
 .language-container {
-    width: 100%;
+    width: 75%;
     height: 100%;
     position: relative;
-    background: url("assets/bg-green-01.png") no-repeat;
+    background: url(assets/bg-green-01.png) no-repeat;
     background-size: cover;
-
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
 }
 
 
@@ -143,7 +158,7 @@ a:active { color: white; }
     position: absolute;
     bottom: 0;
     background: #49B4B2;
-    height: 230px;
+    height: 11.5rem;
 }
 
 .current-position {
@@ -155,34 +170,42 @@ a:active { color: white; }
 }
 
 .current-position .airport {
-    width: 80px;
-    height: 80px;
+    width: 65px;
+    height: 65px;
     padding: 0 1rem 0 0;
     background: url("assets/img-airport.png") no-repeat;
     background-size: contain;
 }
 
 .current-position .metro {
-    width: 80px;
-    height: 80px;
+    width: 65px;
+    height: 65px;
     padding: 0 1rem 0 0;
     background: url("assets/img-metro.png") no-repeat;
     background-size: contain;
 }
 
 .current-position .taxi {
-    width: 80px;
-    height: 80px;
+    width: 65px;
+    height: 65px;
     padding: 0 1rem 0 0;
     background: url("assets/img-taxi.png") no-repeat;
     background-size: contain;
 }
 
 .current-position .hotel {
-    width: 80px;
-    height: 80px;
+    width: 65px;
+    height: 65px;
     padding: 0 1rem 0 0;
     background: url("assets/img-hotel.png") no-repeat;
+    background-size: contain;
+}
+
+.current-position .hotel {
+    width: 65px;
+    height: 65px;
+    padding: 0 1rem 0 0;
+    background: url("assets/img-restaurant.png") no-repeat;
     background-size: contain;
 }
 
@@ -203,7 +226,8 @@ a:active { color: white; }
     flex-direction: row;
     align-items: center;
     justify-content: left;
-    padding: 0.5rem;
+    /* padding: 0.5rem; */
+    zoom: 0.9;
 }
 
 
@@ -305,7 +329,7 @@ a:active { color: white; }
 .position-selection .icon-restaurant {
     width: 55px;
     height: 55px;
-    background: url("assets/img-hotel_green.png") no-repeat;
+    background: url("assets/img-restaurant_green.png") no-repeat;
 }
 
 .active .icon-airport{
@@ -328,10 +352,10 @@ a:active { color: white; }
     background: url("assets/img-hotel_yellow.png") no-repeat;
 }
 
-.active .icon-hotel {
+.active .icon-restaurant {
     width: 55px;
     height: 55px;
-    background: url("assets/img-hotel_yellow.png") no-repeat;
+    background: url("assets/img-restaurant_yellow.png") no-repeat;
 }
 
 .location-details {
@@ -357,9 +381,9 @@ a:active { color: white; }
 
 .here-map-box {
     min-width: 640px;
-    min-height: 480px;
+    min-height: 320px;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: absolute;
 }
 
@@ -443,9 +467,9 @@ a:active { color: white; }
     cursor: pointer;
 }
 
-.global-map-box{
-    height: 70%;
+.global-map-box {
     position: absolute;
-    top: 0;
+    top: 1.25rem;
     width: 100%;
+    bottom: 12.8rem;
 }
